crates/ars-components/src/layout/toolbar/snapshots/ars_components__layout__toolbar__tests__toolbar_item_disabled.snap
---
source: crates/ars-components/src/layout/toolbar/mod.rs
expression: "snapshot_attrs(&service(Props::new()).connect(&|_| {}).item_attrs(2))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toolbar",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
