crates/ars-components/src/layout/toolbar/snapshots/ars_components__layout__toolbar__tests__toolbar_root_disabled.snap
---
source: crates/ars-components/src/layout/toolbar/mod.rs
expression: "snapshot_attrs(&service(Props::new().disabled(true)).connect(&|_|\n{}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toolbar",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Dir,
            String(
                "ltr",
            ),
        ),
        (
            Role,
            String(
                "toolbar",
            ),
        ),
    ],
    styles: [],
}
