crates/ars-components/src/layout/toolbar/snapshots/ars_components__layout__toolbar__tests__toolbar_separator.snap
---
source: crates/ars-components/src/layout/toolbar/mod.rs
expression: "snapshot_attrs(&service(Props::new()).connect(&|_| {}).separator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "separator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toolbar",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "vertical",
            ),
        ),
        (
            Role,
            String(
                "separator",
            ),
        ),
    ],
    styles: [],
}
